--- a/translations/kangyur/translations/049-004_toh109-the_sutra_on_the_mountain_gayasirsa.xml
+++ b/translations/kangyur/translations/049-004_toh109-the_sutra_on_the_mountain_gayasirsa.xml
@@ -42,7 +42,7 @@
                                         Lindsay</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.5 <date>2023</date>
+                <edition>v 1.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -84,7 +84,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-04-18T17:22:34.551Z" user="admin">18/04/2023 17:22:34</note>
+                                <note type="lastUpdated" date-time="2023-05-04T16:59:54.22Z" user="admin">04/05/2023 16:59:54</note>
                                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-08T07:42:51.906Z" user="andreas">v
                                         0.1.0</note>
                                 <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:10:59.245Z" user="mike">2.f</note>
@@ -135,6 +135,7 @@
                             <note type="updated" update="text-version" value="1.0.3" date-time="2023-04-17T12:00:42.285Z" user="martina-cotter">updated notes.</note>
                             <note type="updated" update="text-version" value="1.0.4" date-time="2023-04-17T12:06:29.797Z" user="martina-cotter">Updated note.</note>
                             <note type="updated" update="text-version" value="1.0.5" date-time="2023-04-18T17:22:31.694Z" user="martina-cotter">Adding new note for linking translation plus bib entry.</note>
+                            <note type="updated" update="text-version" value="1.0.6" date-time="2023-05-04T16:59:51.328Z" user="andre">Glossary revised - activated in CG</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -1629,7 +1630,7 @@
                                                 Banarsidass, 1997.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT22084-049-004-434">
@@ -1643,31 +1644,13 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-049-004-313">
-                                                  <term>bhagavat </term>
-                                                  <term xml:lang="Bo-Ltn" status="verified">bcom
-                                                  ldan ’das </term>
-                                                  <term xml:lang="bo">བཅོམ་ལྡན་འདས།</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">bhagavat</term>
-                                                  <term type="definition">In Buddhist literature, an
-                                                  epithet applied to buddhas, most often to
-                                                  Śākyamuni. The Sanskrit term generically means
-                                                  “possessing fortune,” but in Buddhist contexts it
-                                                  implies that a buddha is in possession of six
-                                                  auspicious qualities (<foreign xml:lang="Sa-Ltn" type="term">bhaga</foreign>) associated with
-                                                  complete awakening. The Tibetan term‍—where
-                                                  <foreign xml:lang="Bo-Ltn" type="term">bcom</foreign> is said to refer to “subduing” the
-                                                  four <foreign xml:lang="Sa-Ltn" type="term">māras</foreign>, <foreign xml:lang="Bo-Ltn" type="term">ldan</foreign> to “possessing” the
-                                                  great qualities of buddhahood, and <foreign xml:lang="Bo-Ltn" type="term">’das</foreign> to
-                                                  “going beyond” saṃsāra and nirvāṇa‍—possibly
-                                                  reflects the commentarial tradition where the
-                                                  Sanskrit <foreign xml:lang="Sa-Ltn" type="term">bhagavat</foreign> is interpreted as “one who
-                                                  destroys the four māras.” This is achieved either
-                                                  by reading <foreign xml:lang="Sa-Ltn" type="term">bhagavat</foreign> as <foreign xml:lang="Sa-Ltn" type="term">bhagnavat</foreign> (“one who broke”),
-                                                  or by tracing the word <foreign xml:lang="Sa-Ltn" type="term">bhaga</foreign> to the root √<foreign xml:lang="Sa-Ltn" type="term">bhañj</foreign> (“to
-                                                  break”).</term>
-                                                  <term type="alternative">Bhagavat</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-049-004-313" type="term" mode="match">
+                            <term>bhagavat</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">bcom ldan ’das</term>
+                            <term xml:lang="bo" type="sourceAttested">བཅོམ་ལྡན་འདས།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">bhagavat</term>
+                            <term type="alternative">Bhagavat</term>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-049-004-316">
@@ -1778,31 +1761,20 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-049-004-332">
-                                                  <term>bhikṣu</term>
-                                                  <term xml:lang="Bo-Ltn" status="verified">dge
-                                                  slong </term>
-                                                  <term xml:lang="bo">དགེ་སློང་།</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">bhikṣu</term>
-                                                  <term type="definition">A fully ordained Buddhist
-                                                  monk.</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-049-004-332" type="term" mode="match">
+                            <term>bhikṣu</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">dge slong</term>
+                            <term xml:lang="bo" type="sourceAttested">དགེ་སློང་།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">bhikṣu</term>
+                        </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-049-004-339">
-                                                  <term>gandharva</term>
-                                                  <term xml:lang="Bo-Ltn" status="verified">dri za </term>
-                                                  <term xml:lang="bo">དྲི་ཟ།</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">gandharva</term>
-                                                  <term type="definition">A class of generally
-                                                  benevolent nonhuman beings who inhabit the skies,
-                                                  sometimes said to inhabit fantastic cities in the
-                                                  clouds, and more specifically to dwell on the
-                                                  eastern slopes of Mount Meru, where they are under
-                                                  the jurisdiction of the Great King Dhṛtarāṣṭra.
-                                                  They are most renowned as celestial musicians who
-                                                  serve the gods.</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-049-004-339" type="term" mode="match">
+                            <term>gandharva</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">dri za</term>
+                            <term xml:lang="bo" type="sourceAttested">དྲི་ཟ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">gandharva</term>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-049-004-351">
@@ -1911,18 +1883,12 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-049-004-374">
-                                                  <term>appropriation</term>
-                                                  <term xml:lang="Bo-Ltn" status="verified">nye bar
-                                                  len pa </term>
-                                                  <term xml:lang="bo">ཉེ་བར་ལེན་པ།</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">upādāna</term>
-                                                  <term type="definition">Also means “grasping” or
-                                                  “clinging;” but has a particular meaning as the
-                                                  ninth of the twelve links of dependent arising,
-                                                  between craving (<foreign xml:lang="Sa-Ltn" type="term">tṛṣṇā</foreign>, <foreign xml:lang="Bo-Ltn" type="term">sred pa</foreign>)
-                                                  and becoming or existence (<foreign xml:lang="Sa-Ltn" type="term">bhava</foreign>, <foreign xml:lang="Bo-Ltn" type="term">srid pa</foreign>).</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-049-004-374" type="term" mode="match">
+                            <term>appropriation</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">nye bar len pa</term>
+                            <term xml:lang="bo" type="sourceAttested">ཉེ་བར་ལེན་པ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">upādāna</term>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-049-004-375">
@@ -1987,21 +1953,13 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-049-004-383">
-                                                  <term>pratyekabuddha</term>
-                                                  <term xml:lang="Bo-Ltn" status="verified">rang
-                                                  sangs rgyas </term>
-                                                  <term xml:lang="bo">རང་སངས་རྒྱས།</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">pratyekabuddha</term>
-                                                  <term type="definition">Literally, “buddha for
-                                                  oneself” or “solitary realizer.” Those who attain
-                                                  buddhahood in a time when a buddha’s doctrine is
-                                                  no longer available in the world, and who remain
-                                                  either in solitude or among peers, without
-                                                  teaching the path to liberation to others. They
-                                                  are sometimes called “rhinoceros-like” for their
-                                                  preference for staying in solitude.</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-049-004-383" type="term" mode="match">
+                            <term>pratyekabuddha</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">rang sangs rgyas</term>
+                            <term xml:lang="bo" type="sourceAttested">རང་སངས་རྒྱས།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">pratyekabuddha</term>
+                            <term type="definition">Literally, “buddha for oneself” or “solitary realizer.” Those who attain buddhahood in a time when a buddha’s doctrine is no longer available in the world, and who remain either in solitude or among peers, without teaching the path to liberation to others. They are sometimes called “rhinoceros-like” for their preference for staying in solitude.</term>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-049-004-385">
@@ -2094,17 +2052,12 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-049-004-399">
-                                                  <term>perfection of wisdom </term>
-                                                  <term xml:lang="Bo-Ltn" status="verified">shes rab
-                                                  kyi pha rol tu phyin pa </term>
-                                                  <term xml:lang="bo">ཤེས་རབ་ཀྱི་ཕ་རོལ་ཏུ་ཕྱིན་པ།</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">prajñāpāramitā</term>
-                                                  <term type="definition">The sixth of the six
-                                                  perfections, it refers to the profound
-                                                  understanding of the emptiness of all phenomena,
-                                                  the realization of ultimate reality.</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-049-004-399" type="term" mode="match">
+                            <term>perfection of wisdom</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">shes rab kyi pha rol tu phyin pa</term>
+                            <term xml:lang="bo" type="sourceAttested">ཤེས་རབ་ཀྱི་ཕ་རོལ་ཏུ་ཕྱིན་པ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">prajñāpāramitā</term>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-049-004-400">
@@ -2144,18 +2097,12 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-049-004-412">
-                                                  <term>very limit of reality</term>
-                                                  <term xml:lang="Bo-Ltn" status="verified">yang dag
-                                                  pa’i mtha’ </term>
-                                                  <term xml:lang="bo">ཡང་དག་པའི་མཐའ།</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">bhūtakoṭi</term>
-                                                  <term type="definition">This term has three
-                                                  meanings: (1) the ultimate nature, (2) the
-                                                  experience of the ultimate nature, and (3) the
-                                                  quiescent state of an arhat to be avoided by
-                                                  bodhisattvas.</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-049-004-412" type="term" mode="match">
+                            <term>very limit of reality</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">yang dag pa’i mtha’</term>
+                            <term xml:lang="bo" type="sourceAttested">ཡང་དག་པའི་མཐའ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">bhūtakoṭi</term>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-049-004-415">
@@ -2297,20 +2244,12 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="person" xml:id="UT22084-049-004-438">
-                                                  <term>Bimbisāra</term>
-                                                  <term xml:lang="Bo-Ltn">gzugs can snying po</term>
-                                                  <term xml:lang="bo">གཟུགས་ཅན་སྙིང་པོ།</term>
-                                                  <term xml:lang="Sa-Ltn">bimbisāra</term>
-                                                  <term type="definition">The king of Magadha and a
-                                                  great patron of the Buddha. His birth coincided
-                                                  with the Buddha’s, and his father, King Mahāpadma,
-                                                  named him “Essence of Gold” after mistakenly
-                                                  attributing the brilliant light that marked the
-                                                  Buddha’s birth to the birth of his son by Queen
-                                                  Bimbī (“Goldie”). Accounts of Bimbisāra’s youth
-                                                  and life can be found in <ptr target="https://read.84000.co/translation/toh1-1.html">The Chapter on Going Forth</ptr> (Toh 1-1, <title xml:lang="Sa-Ltn">Pravrajyāvastu</title>).</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-049-004-438" type="person" mode="match">
+                            <term>Bimbisāra</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">gzugs can snying po</term>
+                            <term xml:lang="bo" type="sourceAttested">གཟུགས་ཅན་སྙིང་པོ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">bimbisāra</term>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="place" xml:id="UT22084-049-004-439">
