--- a/translations/kangyur/translations/101-146_toh1090,1777-in_praise_of_the_mistress_of_disease.xml
+++ b/translations/kangyur/translations/101-146_toh1090,1777-in_praise_of_the_mistress_of_disease.xml
@@ -24,7 +24,7 @@
         <editor role="finalReviewer" ref="eft:person-289">Nathaniel Rich</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.3 <date>2023</date>
+                <edition>v 1.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -71,7 +71,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-05-06T10:26:26.371Z" user="admin">06/05/2023 10:26:26</note>
+        <note type="lastUpdated" date-time="2023-05-06T12:16:26.657Z" user="admin">06/05/2023 12:16:26</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2022-04-12T07:53:43.707Z" user="line-tofte">2.h</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-12T07:53:43.707Z" user="line-tofte">Auto
           (update-publication-status)</note>
@@ -121,6 +121,7 @@
         <note type="updated" update="text-version" value="1.0.2" date-time="2023-05-04T15:56:52.131Z" user="andre">Glossary matching revised -
           activated in CG</note>
           <note type="updated" update="text-version" value="1.0.3" date-time="2023-05-06T10:26:23.545Z" user="laura">Revised translation and introduction</note>
+          <note type="updated" update="text-version" value="1.0.4" date-time="2023-05-06T12:16:23.764Z" user="laura">Small edits to new revised version</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -311,7 +312,7 @@
                 standing on Śiva and we have taken the Tibetan word <foreign xml:lang="Bo-Ltn" type="quote">phyed</foreign> (Sanskrit <foreign xml:lang="Sa-Ltn" type="term">ardha</foreign>), which literally means “half,” to mean “the halfway point” (i.e., the waist) of
                 Mahādeva’s body. Another possible translation of this line could be “You are present as half of Mahādeva’s body.” This could then be a
                 reference to Mahākālī as the female part of the half-male, half-female form of Śiva called Ardhanārīśvara (“Lord Who Is Half Female”),
-                although in this form the female half is usually Śiva’s consort Parvati.</note> |7|</l>
+                although in this form the female half is usually Śiva’s consort Pārvatī.</note> |7|</l>
           </lg>
           <milestone unit="chunk" xml:id="UT22084-101-146-211"/>
           <lg tid="110">
@@ -539,6 +540,15 @@
               <term xml:lang="bo">གཟུངས།</term>
               <term xml:lang="Sa-Ltn">dhāraṇī</term>
             </gloss>
+                    </item>
+          <item>
+                        <gloss type="term" xml:id="UT22084-101-146-216">
+            <term>uraga</term>
+            <term xml:lang="Bo-Ltn">brang gis ’gro ba</term>
+                            <term xml:lang="bo">བྲང་གིས་འགྲོ་བ།</term>
+            <term xml:lang="Sa-Ltn">uraga</term>
+            <term type="definition">A class of serpent-like beings.</term>
+          </gloss>
                     </item>
         </list>
       </div>
